<resources>
    <string name="app_name">CV Bike</string>


    <string name="title_activity_loading">Willkommen</string>
    <string name="title_activity_kickoff">Start</string>
    <string name="title_activity_dimension">Körpermaße</string>
    <string name="title_activity_setting">Einstellungen</string>
    <string name="title_activity_camera">Foto</string>
    <string name="title_activity_result">Ergebnis</string>

    <string name="button_last_result">letztes Ergebnis</string>
    <string name="textview_no_choice">bitte auswählen</string>
    <string name="button_seating_position">Sitzhaltung</string>
    <string name="button_wheel_size">Reifengröße</string>

    <string name="toast_backpress_dimension_activity">Drücken Sie erneut Zurück um die App zu beenden</string>

    <string name="title_ab_info">Impressum</string>
    <string name="text_ab_info">Fragen und Anregungen könnt Ihr sehr gerne per Mail an info@xy.com schicken</string>

    <string name="title_ab_help">Give me five...</string>
        <string name="text_ab_help"><![CDATA[<b>1.Neue Vermessung</b><br/>Lege eine neue Vermessung an oder öffne ein abgeschlossene Optimierung<br/><br/>
                                            <b>2.Körpermaße</b><br/>Erfasse deine Körpermaße<br/><br/>
                                            <b>3.Randbedingungen</b><br/>Bevorzugte Sitzhaltung und Reifengröße sind erforderlich<br/><br/>
                                            <b>4.Foto</b><br/>Erstelle ein Foto von deinem Rennrad<br/><br/>
                                            <b>5.Optimierung</b><br/>Deine persönliche optimierte Sitzposition wird ausgegeben]]></string>

    <string name="title_ab_human">Deine Körpermaße</string>
    <string name="text_ab_human"><![CDATA[<b>Armlänge</b><br/>Nimm ein Stift in die Faust und messe den Abstand von dem Stift bis zu der kleinen Aushöhlung auf der Schulter<br/><br/>
                                            <b>Körperlänge</b><br/>Nimm das Maß bis zu der kleinen v-förmigen Einbuchtung am Brustbein<br/><br/>
                                            <b>Schrittlänge</b><br/>Hierfür kannst du am besten ein Buch zwischen die Beine klemmen und bis zur Oberkante des Buches messen]]></string>

    <string name="title_ab_set">Randbedingungen</string>
    <string name="text_ab_set"><![CDATA[<b>1.Sitzhaltung</b><br/>Wähle deine bevorzugte Sitzhaltung aus<br/><br/>
                                            <b>2.Reifengröße</b><br/>Wähle deine Reifengröße aus]]></string>

    <string name="cycling_position_title">Sitzhaltung</string>
    <string name="cycling_position_touring">Touren-Position</string>
    <string name="cycling_position_sport">sportliche Haltung</string>
    <string name="cycling_position_race">Race-Haltung</string>

    <string name="title_set_list2_title">Reifengröße (ETRTO)</string>

    <string name="title_ab_cam">Bildaufnahme</string>
    <string name="text_ab_cam"><![CDATA[<b>1.Ausrichtung</b><br/>Richte die Kamera für das Foto horizontal aus<br/><br/>
                                            <b>2.Fokus</b><br/>Setze dein Rad in den Fokus und vermeide einen breiten Rand]]></string>


    <string name="toast_dimension">Es wurden noch nicht alle Längen ausgefüllt</string>
    <string name="toast_setting">Es wurden noch nicht alle Randbedingungen getroffen</string>


    <string name="info_FrontTyreTip">Bitte in die Mitte es Vorderreifens tippen!</string>

    <string name="seek_fronttyre">Größe Vorderreifen</string>
    <string name="seek_backtyre">Größe Hinterreifen</string>

    <string name="camera_nextbutton">Weiter</string>

    <string name="back_TyreSet">Reifengröße korrigieren</string>











    <string name="preferenceSitzpositionIndexName">Sitzpositions-Index H</string>
    <string name="preferenceSitzpositionKey">Sitzpositions-Index</string>
    <string name="preferenceSitzpositionTourenDefault">0,52</string>

    <string name="preferenceInsideLegIndexName">Schrittlänge in cm</string>
    <string name="preferenceInsideLegKey">Schrittlänge</string>
    <string name="preferenceInsideLegDefault">90</string>

    <string name="preferenceTrunkLengthIndexName">Rumpflänge in cm</string>
    <string name="preferenceTrunkLengthKey">Rumpflänge</string>
    <string name="preferenceTrunkLengthDefault">80</string>

    <string name="preferenceBodyLengthIndexName">Körperlänge in cm</string>
    <string name="preferenceBodyLengthKey">Körperlänge</string>
    <string name="preferenceBodyLengthDefault">150</string>

    <string name="preferenceArmLengthIndexName">Armlänge in cm</string>
    <string name="preferenceArmLengthKey">Körperlänge</string>
    <string name="preferenceArmLengthDefault">60</string>

    <string name="listSeatPosIndex">ListPref</string>
    <string name="listSeatPosIndexDefaultValue">0,52</string>


    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="title_activity_person_dimensions">PersonDimensionsActivity</string>


    <string name="title_activity_einstellungen">Einstellungen</string>
    <string name="action_settings">Settings</string>
    <string name="action_daten_aktualisieren">Daten aktualisieren</string>


</resources>
